--- a/index.html
+++ b/index.html
@@ -28,16 +28,56 @@
       };
     </script>
   </head>
-  <body class="bg-yellow-50 flex justify-center items-center">
-    <div class="w-[90vw] h-[90vh] bg-green-200 rounded-lg flex justify-around items-center">
-        <div class="bg-gray-50 w-[25%] h-[90%] rounded-lg"></div>
-        <div class="bg-gray-50 w-[70%] h-[90%] rounded-lg">
-            <div class="bg-gray-200 w-[50%] h-[10%] rounded-tl-lg rounded-br-lg flex items-center justify-around">
-                <a href="#" class="text-xl tracking-wide text-[#00171F] transition duration-300 border-b-2 border-[#00171F] hover:border-transparent">Home</a>
-                <a href="#" class="text-xl tracking-wide text-[#00171F] transition duration-300 border-b-2 border-transparent hover:border-[#00171F]">About</a>
-                <a href="#" class="text-xl tracking-wide text-[#00171F] transition duration-300 border-b-2 border-transparent hover:border-[#00171F]">Projects</a>
-                <a href="#" class="text-xl tracking-wide text-[#00171F] transition duration-300 border-b-2 border-transparent hover:border-[#00171F]">Contact</a>
+  <body class="bg-gray-900 flex justify-center items-center">
+    <div class="w-[90vw] h-[90vh] bg-[#111111] rounded-lg flex justify-center items-center shadow-lg shadow-gray-500">
+        <div class="mx-auto bg-[#222222] w-[22%] h-[90%] rounded-lg flex flex-col items-center border border-gray-700 shadow-md shadow-gray-700">
+          <img src="assets/profileIcon.png" class="w-[50%] h-auto my-[3vh] rounded-full border-4 border-white shadow-md shadow-white">
+          <h3 class="text-lg text-white">Hi, my name is</h3>
+          <h1 class="text-4xl text-white font-bold">Victor Liu</h1>
+          <hr class="border-t-2 border-gray-700 w-[90%] mt-[2vh]">
+          <div class="flex flex-col justify-around h-[100%] my-auto items-center">
+            <div class="flex flex-row h-[8vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh]">
+              <img src="assets/emailIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
+              <div class="flex flex-col">
+                <p class="text-gray-400 font-bold">Email</p>
+                <p class="text-gray-300">victorliu5000@gmail.com</p>
+              </div>
             </div>
+            <div class="flex flex-row h-[8vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh]">
+              <img src="assets/phoneIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
+              <div class="flex flex-col">
+                <p class="text-gray-400 font-bold">Phone</p>
+                <p class="text-gray-300">(443)-983-3212</p>
+              </div>
+            </div>
+            <div class="flex flex-row h-[8vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh]">
+              <img src="assets/linkedinIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
+              <div class="flex flex-col">
+                <p class="text-gray-400 font-bold">LinkedIn</p>
+                <p class="text-gray-300">victor-liu-6495b1297</p>
+              </div>
+            </div>
+            <div class="flex flex-row h-[8vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh]">
+              <img src="assets/devpostIcon.svg" alt="" class="h-[7vh] w-auto rounded-full">
+              <div class="flex flex-col">
+                <p class="text-gray-400 font-bold">Devpost</p>
+                <p class="text-gray-300">victorliu5000</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="mr-auto bg-[#222222] border border-gray-700 w-[72%] h-[90%] rounded-lg shadow-md shadow-gray-700 flex flex-col">
+          <div class="flex justify-between w-full h-[10%]">
+            <div class="ml-auto bg-[#333333] w-[50%] rounded-tr-lg rounded-bl-lg flex items-center justify-around border-b border-r border-gray-700 shadow-md shadow-gray-700">
+              <a href="#" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent">Home</a>
+              <a href="#" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-transparent hover:border-white">About</a>
+              <a href="#" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-transparent hover:border-white">Projects</a>
+              <a href="#" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-transparent hover:border-white">Contact</a>
+            </div>
+          </div>
+          <div class="flex-grow flex items-center justify-center">
+            <h1 class="text-8xl text-white font-bold text-center">Welcome to my Portfolio!</h1>
+          </div>
         </div>
     </div>
   </body>
