about me page setup

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
       </div>
       <div class="mr-auto bg-[#222222] border border-gray-700 w-[72%] h-[90%] rounded-lg shadow-md shadow-gray-700 flex flex-col animated-background">
         <div class="flex justify-between w-full h-[10%]">
-          <div class="ml-auto bg-[#333333] w-[50%] rounded-tr-lg rounded-bl-lg flex items-center justify-around border-b border-r border-gray-700 shadow-md shadow-gray-700">
-            <a href="#" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent">Home</a>
-            <a href="#" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-transparent hover:border-white">About</a>
+          <div class="ml-auto bg-zinc-800 w-[50%] rounded-tr-lg rounded-bl-lg flex items-center justify-around border-b border-r border-gray-700 shadow-md shadow-gray-700">
+            <a href="index.html" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent">Home</a>
+            <a href="about.html" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-transparent hover:border-white">About</a>
             <a href="#" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-transparent hover:border-white">Projects</a>
             <a href="#" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-transparent hover:border-white">Contact</a>
           </div>
