finished home and about. started contact

--- a/index.html
+++ b/index.html
@@ -49,54 +49,19 @@
   </head>
   <body class="bg-gray-900 flex justify-center items-center">
     <div class="w-[90vw] h-[90vh] bg-[#111111] rounded-lg flex justify-center items-center shadow-lg shadow-gray-500">
-      <div class="mx-auto bg-[#222222] w-[22%] h-[90%] rounded-lg flex flex-col items-center border border-gray-700 shadow-md shadow-gray-700">
-        <img src="assets/profileIcon.png" class="w-[50%] h-auto my-[3vh] rounded-full border-4 border-white shadow-md shadow-white">
-        <h3 class="text-lg text-white">Hi, my name is</h3>
-        <h1 class="text-4xl text-white font-bold">Victor Liu</h1>
-        <hr class="border-t-2 border-gray-700 w-[90%] mt-[2vh]">
-        <div class="flex flex-col justify-around h-[100%] my-auto items-center">
-          <div id="copyEmail" data-email="victorliu5000@gmail.com" class="flex flex-row h-[8vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
-            <img src="assets/emailIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
-            <div class="flex flex-col">
-              <p class="text-gray-400 font-bold">Email</p>
-              <p class="text-gray-300">victorliu5000@gmail.com</p>
-            </div>
-          </div>
-          <div id="copyPhone" data-phone="(443)-983-3212" class="flex flex-row h-[8vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
-            <img src="assets/phoneIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
-            <div class="flex flex-col">
-              <p class="text-gray-400 font-bold">Phone</p>
-              <p class="text-gray-300">(443)-983-3212</p>
-            </div>
-          </div>
-          <div id="copyLinkedIn" data-linkedin="victor-liu-6495b1297" class="flex flex-row h-[8vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
-            <img src="assets/linkedinIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
-            <div class="flex flex-col">
-              <p class="text-gray-400 font-bold">LinkedIn</p>
-              <p class="text-gray-300">victor-liu-6495b1297</p>
-            </div>
-          </div>
-          <div id="copyDevpost" data-devpost="victorliu5000" class="flex flex-row h-[8vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
-            <img src="assets/devpostIcon.svg" alt="" class="h-[7vh] w-auto rounded-full">
-            <div class="flex flex-col">
-              <p class="text-gray-400 font-bold">Devpost</p>
-              <p class="text-gray-300">victorliu5000</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="mr-auto bg-[#222222] border border-gray-700 w-[72%] h-[90%] rounded-lg shadow-md shadow-gray-700 flex flex-col animated-background">
-        <div class="flex justify-between w-full h-[10%]">
-          <div class="ml-auto bg-zinc-800 w-[50%] rounded-tr-lg rounded-bl-lg flex items-center justify-around border-b border-r border-gray-700 shadow-md shadow-gray-700">
+      <div class="mr-auto bg-[#222222] border border-gray-700 w-[96%] h-[90%] rounded-lg shadow-md shadow-gray-700 flex flex-col animated-background mx-auto my-auto">
+        <div class="flex justify-center w-full h-[10%]">
+          <div class="ml-auto bg-zinc-800 w-[40vw] rounded-tr-lg rounded-bl-lg flex items-center justify-around border-b border-r border-gray-700 shadow-md shadow-gray-700">
             <a href="index.html" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent">Home</a>
-            <a href="about.html" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-transparent hover:border-white">About</a>
-            <a href="#" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-transparent hover:border-white">Projects</a>
-            <a href="#" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-transparent hover:border-white">Contact</a>
+            <a href="about.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">About</a>
+            <a href="project.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">Projects</a>
+            <a href="contact.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">Contact</a>
           </div>
         </div>
         <div class="flex-grow flex flex-col items-center justify-center">
-          <h1 class="text-8xl text-white font-bold text-center my-[5vh]">Welcome to my Website!</h1>
-          <p class="text-lg text-gray-300 w-[50vw] text-center mb-[5vh]">I'm a rising senior at Centennial High School and an aspiring Computer Science major. Here is my portfolio where you can learn more about me and discover some of my passions and projects I've created. Have fun!</p>
+          <h3 class="text-2xl text-white font-bold">Hi, my name is Victor Liu</h3>
+          <h1 class="text-8xl text-white font-bold text-center mb-[5vh]">Welcome to my Website!</h1>
+          <p class="text-lg text-gray-300 w-[50vw] text-center mb-[5vh]">I'm a rising senior at Centennial High School and an aspiring Computer Science major. Here is my portfolio where you can learn more about me, discover some of my passions, and check out some of the projects I've created. Have fun!</p>
         </div>
       </div>      
     </div>
