--- a/contact.html
+++ b/contact.html
@@ -41,66 +41,88 @@
       }
 
       .animated-background {
-        background: linear-gradient(45deg, #050505, #333333);
+        background: linear-gradient(45deg, #333333, #050505);
         background-size: 400% 400%;
         animation: gradientAnimation 10s ease infinite;
       }
     </style>
-    </head>
-    <body class="bg-gray-900 flex justify-center items-center">
-        <div class="w-[90vw] h-[90vh] bg-[#111111] rounded-lg flex justify-center items-center shadow-lg shadow-gray-500">
-            <div class="mx-auto bg-[#222222] w-[22%] h-[90%] rounded-lg flex flex-col items-center border border-gray-700 shadow-md shadow-gray-700">
-                <img src="assets/profileIcon.png" class="w-[50%] h-auto my-[3vh] rounded-full border-4 border-white shadow-md shadow-white">
-                <h1 class="text-4xl text-white font-bold">Victor Liu</h1>
-                <hr class="border-t-2 border-gray-700 w-[90%] mt-[2vh]">
-                <div class="flex flex-col justify-around h-[100%] my-auto items-center">
-                <div id="copyEmail" data-email="victorliu5000@gmail.com" class="flex flex-row h-[9vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
-                    <img src="assets/emailIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
-                    <div class="flex flex-col">
-                        <p class="text-gray-400 font-bold">Email</p>
-                        <p class="text-gray-300">victorliu5000@gmail.com</p>
-                    </div>
-                </div>
-                <div id="copyPhone" data-phone="(443)-983-3212" class="flex flex-row h-[9vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
-                    <img src="assets/phoneIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
-                    <div class="flex flex-col">
-                        <p class="text-gray-400 font-bold">Phone</p>
-                        <p class="text-gray-300">(443)-983-3212</p>
-                    </div>
-                </div>
-                <div id="copyLinkedIn" data-linkedin="victor-liu-6495b1297" class="flex flex-row h-[9vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
-                    <img src="assets/linkedinIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
-                    <div class="flex flex-col">
-                        <p class="text-gray-400 font-bold">LinkedIn</p>
-                        <p class="text-gray-300">victor-liu-6495b1297</p>
-                    </div>
-                </div>
-                <div id="copyDevpost" data-devpost="victorliu5000" class="flex flex-row h-[9vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
-                    <img src="assets/devpostIcon.svg" alt="" class="h-[7vh] w-auto rounded-full">
-                    <div class="flex flex-col">
-                        <p class="text-gray-400 font-bold">Devpost</p>
-                        <p class="text-gray-300">victorliu5000</p>
-                    </div>
-                </div>
-            </div>
+  </head>
+  <body class="bg-gray-900 flex justify-center items-center">
+    <div class="w-[90vw] h-[90vh] bg-[#111111] rounded-lg flex justify-center items-center shadow-lg shadow-gray-500">
+      <div class="mx-auto bg-[#222222] w-[22%] h-[90%] rounded-lg flex flex-col items-center border border-gray-700 shadow-md shadow-gray-700">
+        <img src="assets/profileIcon.png" class="w-[50%] h-auto my-[3vh] rounded-full border-4 border-white shadow-md shadow-white">
+        <h1 class="text-4xl text-white font-bold">Victor Liu</h1>
+        <hr class="border-t-2 border-gray-700 w-[90%] mt-[2vh]">
+        <div class="flex flex-col justify-around h-[100%] my-auto items-center">
+        <div id="copyEmail" data-email="victorliu5000@gmail.com" class="flex flex-row h-[9vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
+          <img src="assets/emailIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
+          <div class="flex flex-col">
+            <p class="text-gray-400 font-bold">Email</p>
+            <p class="text-gray-300">victorliu5000@gmail.com</p>
+          </div>
         </div>
-        <div class="mr-auto bg-[#222222] border border-gray-700 w-[72%] h-[90%] rounded-lg shadow-md shadow-gray-700 flex flex-col animated-background">
-            <div class="flex justify-between w-full h-[10%]">
-                <h1 class="text-4xl font-bold text-white my-[3vh] mx-[2vw]">Contact</h1>
-                <div class="ml-auto bg-zinc-800 w-[40vw] rounded-tr-lg rounded-bl-lg flex items-center justify-around border-b border-r border-gray-700 shadow-md shadow-gray-700">
-                    <a href="index.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">Home</a>
-                    <a href="about.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">About</a>
-                    <a href="projects.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">Projects</a>
-                    <a href="contact.html" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent">Contact</a>
-                </div>
-            </div>
-            <hr class="border-t-[1vh] border-gray-600 w-[7%] mt-[2vh] mx-[2vw]">
-            <hr class="border-t-[1vh] border-gray-600 w-[20%] mt-[2vh] mx-[2vw]">
-            <div class="w-[50vw] h-[50vh] mx-auto my-auto">
-                
-            </div>
+        <div id="copyPhone" data-phone="(443)-983-3212" class="flex flex-row h-[9vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
+          <img src="assets/phoneIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
+          <div class="flex flex-col">
+            <p class="text-gray-400 font-bold">Phone</p>
+            <p class="text-gray-300">(443)-983-3212</p>
+          </div>
         </div>
-        <div id="popup" class="hidden text-2xl font-bold fixed top-[3vh] left-1/2 transform -translate-x-1/2 bg-gray-700 text-white py-[1vh] px-[1vw] rounded-lg shadow-lg">Copied to Clipboard</div>
-    <script src="contact.js"></script>
-    </body>
+        <div id="copyLinkedIn" data-linkedin="victor-liu-6495b1297" class="flex flex-row h-[9vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
+          <img src="assets/linkedinIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
+          <div class="flex flex-col">
+            <p class="text-gray-400 font-bold">LinkedIn</p>
+            <p class="text-gray-300">victor-liu-6495b1297</p>
+          </div>
+        </div>
+        <div id="copyGithub" data-github="victorliu15" class="flex flex-row h-[9vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
+          <img src="assets/githubIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
+          <div class="flex flex-col">
+            <p class="text-gray-400 font-bold">Github</p>
+            <p class="text-gray-300">victorliu15</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="mr-auto bg-[#222222] border border-gray-700 w-[72%] h-[90%] rounded-lg shadow-md shadow-gray-700 flex flex-col animated-background">
+      <div class="flex justify-between w-full h-[10%]">
+        <h1 class="text-4xl font-bold text-white my-[3vh] mx-[2vw]">Contact</h1>
+        <div class="ml-auto bg-zinc-800 w-[40vw] rounded-tr-lg rounded-bl-lg flex items-center justify-around border-b border-r border-gray-700 shadow-md shadow-gray-700">
+          <a href="index.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">Home</a>
+          <a href="about.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">About</a>
+          <a href="projects.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">Projects</a>
+          <a href="contact.html" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent">Contact</a>
+        </div>
+      </div>
+      <hr class="border-t-[1vh] border-gray-600 w-[7%] mt-[2vh] mx-[2vw]">
+      <hr class="border-t-[1vh] border-gray-600 w-[20%] mt-[2vh] mx-[2vw]">
+      <div class="w-[50vw] h-[60vh] mx-auto my-auto flex flex flex-col justify-around bg-[#303030] px-10 py-2 rounded-lg border border-gray-600 shadow-xl">
+        <div class="w-full h-[17%] flex justify-between">
+          <div class="flex flex-col w-[48%] h-full">
+            <h3 class="text-xl text-gray-200 mx-2 my-1">First Name: </h3>
+            <input class="w-full h-full py-2 px-5 text-gray-700 text-xl border border-gray-700" id="firstName" type="text" placeholder="First Name">
+          </div>
+          <div class="flex flex-col w-[48%] h-full">
+            <h3 class="text-xl text-white mx-2 my-1">Last Name: </h3>
+            <input class="w-full h-full py-2 px-5 text-gray-700 text-xl border border-gray-700" id="lastName" type="text" placeholder="Last Name">
+          </div>
+        </div>
+        <div class="w-full h-[17%] flex justify-between my-[2vh]">
+          <div class="flex flex-col w-full h-full">
+            <h3 class="text-xl text-white mx-2 my-1">Email: </h3>
+            <input class="w-full h-full py-2 px-5 text-gray-700 text-xl border border-gray-700" id="email" type="text" placeholder="Email">
+          </div>
+        </div>
+        <div class="w-full h-[25%] flex justify-between">
+          <div class="flex flex-col w-full h-full">
+            <h3 class="text-2xl text-white mx-2 my-1">Message: </h3>
+            <input class="w-full h-full py-2 px-5 text-gray-700 text-xl border border-gray-700" id="message" type="text" placeholder="Message">
+          </div>
+        </div>
+        <button class="bg-[#111111] mx-auto my-5 w-[20vw] h-[7vh] text-2xl font-bold text-white py-2 rounded-lg shadow-xl hover:bg-[#191919] duration-300">Submit</button>
+      </div>
+    </div>
+  <div id="popup" class="hidden text-2xl font-bold fixed top-[3vh] left-1/2 transform -translate-x-1/2 bg-gray-700 text-white py-[1vh] px-[1vw] rounded-lg shadow-lg">Copied to Clipboard</div>
+  <script src="contact.js"></script>
+  </body>
 </html>
