projects page setup

--- a/about.html
+++ b/about.html
@@ -48,21 +48,26 @@
     </style>
     </head>
     <body class="bg-gray-900 flex justify-center items-center">
-      <div class="w-[90vw] h-[90vh] bg-[#111111] rounded-lg flex justify-center items-center shadow-lg shadow-gray-500">
+      <div class="w-[90vw] h-[90vh] bg-[#111111] rounded-lg flex justify-center items-center shadow-gray-500 shadow-inner">
         <div class="mx-auto bg-[#222222] w-[22%] h-[90%] rounded-lg flex flex-col items-center border border-gray-700 shadow-md shadow-gray-700">
           <img src="assets/profileIcon.png" class="w-[50%] h-auto my-[3vh] rounded-full border-4 border-white shadow-md shadow-white">
           <h1 class="text-4xl text-white font-bold">Victor Liu</h1>
           <hr class="border-t-2 border-gray-700 w-[90%] mt-[2vh]">
-          <h3 class="text-2xl text-gray-200 w-[90%] mx-auto my-auto text-center">“Your talent determines what you can do. Your motivation determines how much you're willing to do. Your attitude determines how well you do it.” — Lou Holtz</h3>
+          <div class="flex flex-col justify-around items-center w-full h-full">
+            <h3 class="text-2xl text-gray-300 w-[90%] text-center"><span class="font-bold text-white">Your talent</span><br> determines what you can do.</h3>
+            <h3 class="text-2xl text-gray-300 w-[90%] text-center"><span class="font-bold text-white">Your motivation</span> determines how much you're willing to do.</h3>
+            <h3 class="text-2xl text-gray-300 w-[90%] text-center"><span class="font-bold text-white">Your attitude</span> determines how well you do it.</h3>
+            <h3 class="text-2xl text-white w-[90%] text-center"> — Lou Holtz</h3>
+          </div>
         </div>
       <div class="mr-auto bg-[#222222] border border-gray-700 w-[72%] h-[90%] rounded-lg shadow-md shadow-gray-700 flex flex-col animated-background">
       <div class="flex justify-between w-full h-[10%]">
         <h1 class="text-4xl font-bold text-white my-[3vh] mx-[2vw]">About Me</h1>
           <div class="ml-auto bg-zinc-800 w-[40vw] rounded-tr-lg rounded-bl-lg flex items-center justify-around border-b border-r border-gray-700 shadow-md shadow-gray-700">
-            <a href="index.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">Home</a>
-            <a href="about.html" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent">About</a>
-            <a href="projects.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">Projects</a>
-            <a href="contact.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">Contact</a>
+            <a href="index.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Home</a>
+            <a href="about.html" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent hover:text-white">About</a>
+            <a href="project.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Projects</a>
+            <a href="contact.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Contact</a>
           </div>
         </div>
         <hr class="border-t-[1vh] border-gray-500 w-[7%] mt-[2vh] mx-[2vw]">
@@ -75,7 +80,7 @@
                 <img src="assets/tennisIcon.png" alt="" class="w-[10%]">
                 <h3 class="text-xl font-bold text-gray-400 group-hover:text-white">Tennis</h3>
               </div>
-              <hr class="border-t-2 border-gray-500 w-[70%] my-[1vh]">
+              <hr class="border-t-2 border-gray-500 w-[70%] my-[1vh] group-hover:border-white duration-300">
               <p class="text-md text-gray-400 text-center group-hover:text-white duration-300">I've been playing tennis for the past 7 years and it's still a hobby I enjoy a lot to this day</p>
             </div>
             <div class="bg-[#333333] hover:shadow-md hover:shadow-white duration-300 rounded-lg w-full h-[17vh] border-t border-l border-white hover:scale-[1.02] hover:cursor-pointer flex flex-col items-center p-[2vh] group">
@@ -83,7 +88,7 @@
                 <img src="assets/codingIcon.png" alt="" class="w-[10%]">
                 <h3 class="text-xl font-bold text-gray-400 group-hover:text-white">Coding</h3>
               </div>
-              <hr class="border-t-2 border-gray-500 w-[70%] my-[1vh]">
+              <hr class="border-t-2 border-gray-500 w-[70%] my-[1vh] group-hover:border-white duration-300">
               <p class="text-md text-gray-400 text-center group-hover:text-white duration-300">Discovering my passion for coding at a young age, it's something I enjoy doing every day</p>
             </div>
             <div class="bg-[#333333] hover:shadow-md hover:shadow-white duration-300 rounded-lg w-full h-[17vh] border-t border-l border-white hover:scale-[1.02] hover:cursor-pointer flex flex-col items-center p-[2vh] group">
@@ -91,7 +96,7 @@
                 <img src="assets/violinIcon.png" alt="" class="w-[10%]">
                 <h3 class="text-xl font-bold text-gray-400 group-hover:text-white">Violin</h3>
               </div>
-              <hr class="border-t-2 border-gray-500 w-[70%] my-[1vh]">
+              <hr class="border-t-2 border-gray-500 w-[70%] my-[1vh] group-hover:border-white duration-300">
               <p class="text-md text-gray-400 text-center group-hover:text-white duration-300">From kindergarten to junior year, I've been continuously playing the violin</p>
             </div>
             <div class="bg-[#333333] hover:shadow-md hover:shadow-white duration-300 rounded-lg w-full h-[17vh] border-t border-l border-white hover:scale-[1.02] hover:cursor-pointer flex flex-col items-center p-[2vh] group">
@@ -99,7 +104,7 @@
                 <img src="assets/swimmingIcon.png" alt="" class="w-[10%]">
                 <h3 class="text-xl font-bold text-gray-400 group-hover:text-white">Swimming</h3>
               </div>
-              <hr class="border-t-2 border-gray-500 w-[70%] my-[1vh]">
+              <hr class="border-t-2 border-gray-500 w-[70%] my-[1vh] group-hover:border-white duration-300">
               <p class="text-md text-gray-400 text-center group-hover:text-white duration-300">I swam a lot when I was younger and the skills I gained still remain today</p>
             </div>
           </div>
