--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     </style>
   </head>
   <body class="bg-gray-900 flex justify-center items-center">
-    <div class="w-[90vw] h-[90vh] bg-[#111111] rounded-lg flex justify-center items-center shadow-lg shadow-gray-500">
+    <div class="w-[90vw] h-[90vh] bg-[#111111] rounded-lg flex justify-center items-center shadow-gray-500 shadow-inner">
       <div class="mr-auto bg-[#222222] border border-gray-700 w-[96%] h-[90%] rounded-lg shadow-md shadow-gray-700 flex flex-col animated-background mx-auto my-auto">
         <div class="flex justify-center w-full h-[10%]">
           <div class="ml-auto bg-zinc-800 w-[40vw] rounded-tr-lg rounded-bl-lg flex items-center justify-around border-b border-r border-gray-700 shadow-md shadow-gray-700">
-            <a href="index.html" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent">Home</a>
-            <a href="about.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">About</a>
-            <a href="project.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">Projects</a>
-            <a href="contact.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">Contact</a>
+            <a href="index.html" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent hover:text-white">Home</a>
+            <a href="about.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">About</a>
+            <a href="project.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Projects</a>
+            <a href="contact.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Contact</a>
           </div>
         </div>
         <div class="flex-grow flex flex-col items-center justify-center">
