--- a/contact.html
+++ b/contact.html
@@ -59,35 +59,35 @@
     
   </head>
   <body class="bg-gray-900 flex justify-center items-center">
-    <div class="w-[90vw] h-[90vh] bg-[#111111] rounded-lg flex justify-center items-center shadow-lg shadow-gray-500">
-      <div class="mx-auto bg-[#222222] w-[22%] h-[90%] rounded-lg flex flex-col items-center border border-gray-700 shadow-md shadow-gray-700">
+    <div class="w-[90vw] h-[90vh] bg-[#111111] rounded-lg flex justify-center items-center shadow-gray-500 shadow-inner">
+      <div class="mx-auto bg-[#222222] w-[22%] h-[90%] rounded-lg flex flex-col items-center border border-gray-700 shadow-md shadow-gray-700 py-2">
         <img src="assets/profileIcon.png" class="w-[50%] h-auto my-[3vh] rounded-full border-4 border-white shadow-md shadow-white">
         <h1 class="text-4xl text-white font-bold">Victor Liu</h1>
         <hr class="border-t-2 border-gray-700 w-[90%] mt-[2vh]">
         <div class="flex flex-col justify-around h-[100%] my-auto items-center">
         <div id="copyEmail" data-email="victorliu5000@gmail.com" class="flex flex-row h-[9vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
-          <img src="assets/emailIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
+          <img src="assets/emailIcon.png" alt="" class="h-[7vh] w-auto rounded-full shadow-xl shadow-zinc-800">
           <div class="flex flex-col">
             <p class="text-gray-400 font-bold">Email</p>
             <p class="text-gray-300">victorliu5000@gmail.com</p>
           </div>
         </div>
         <div id="copyPhone" data-phone="(443)-983-3212" class="flex flex-row h-[9vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
-          <img src="assets/phoneIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
+          <img src="assets/phoneIcon.png" alt="" class="h-[7vh] w-auto rounded-full shadow-xl shadow-zinc-800">
           <div class="flex flex-col">
             <p class="text-gray-400 font-bold">Phone</p>
             <p class="text-gray-300">(443)-983-3212</p>
           </div>
         </div>
         <div id="copyLinkedIn" data-linkedin="victor-liu-6495b1297" class="flex flex-row h-[9vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
-          <img src="assets/linkedinIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
+          <img src="assets/linkedinIcon.png" alt="" class="h-[7vh] w-auto rounded-full shadow-xl shadow-zinc-800">
           <div class="flex flex-col">
             <p class="text-gray-400 font-bold">LinkedIn</p>
             <p class="text-gray-300">victor-liu-6495b1297</p>
           </div>
         </div>
         <div id="copyGithub" data-github="victorliu15" class="flex flex-row h-[9vh] w-[100%] items-center justify-start space-x-[1vw] bg-[#333333] rounded-lg p-[2vh] shadow-lg hover:cursor-pointer hover:scale-[1.02] transition duration-300">
-          <img src="assets/githubIcon.png" alt="" class="h-[7vh] w-auto rounded-full">
+          <img src="assets/githubIcon.png" alt="" class="h-[7vh] w-auto rounded-full shadow-xl shadow-zinc-800">
           <div class="flex flex-col">
             <p class="text-gray-400 font-bold">Github</p>
             <p class="text-gray-300">victorliu15</p>
@@ -98,47 +98,46 @@
     <div class="mr-auto bg-[#222222] border border-gray-700 w-[72%] h-[90%] rounded-lg shadow-md shadow-gray-700 flex flex-col animated-background">
       <div class="flex justify-between w-full h-[10%]">
         <h1 class="text-4xl font-bold text-white my-[3vh] mx-[2vw]">Contact</h1>
-        <div class="ml-auto bg-zinc-800 w-[40vw] rounded-tr-lg rounded-bl-lg flex items-center justify-around border-b border-r border-gray-700 shadow-md shadow-gray-700">
-          <a href="index.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">Home</a>
-          <a href="about.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">About</a>
-          <a href="projects.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white">Projects</a>
-          <a href="contact.html" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent">Contact</a>
+        <div class="ml-auto bg-zinc-800 w-[40vw] rounded-tr-lg rounded-bl-lg flex items-center justify-around border-b border-r border-gray-700 shadow-md shadow-gray-700 shadow-inner">
+          <a href="index.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Home</a>
+          <a href="about.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">About</a>
+          <a href="project.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Projects</a>
+          <a href="contact.html" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent hover:text-white">Contact</a>
         </div>
       </div>
       <hr class="border-t-[1vh] border-gray-600 w-[7%] mt-[2vh] mx-[2vw]">
       <hr class="border-t-[1vh] border-gray-600 w-[20%] my-[2vh] mx-[2vw]">
       <form>
-        <div class="w-[50vw] h-[60vh] mx-auto my-auto flex flex flex-col justify-around bg-[#303030] px-10 py-2 rounded-lg border border-gray-600 shadow-xl">
+        <div class="shadow-inner w-[50vw] h-[60vh] mx-auto my-auto flex flex flex-col justify-around bg-[#303030] px-10 py-2 rounded-lg border border-gray-600 shadow-xl">
           <div class="w-full h-[17%] flex justify-between">
             <div class="flex flex-col w-[48%] h-full">
               <h3 class="text-xl text-gray-200 mx-2 my-1">First Name: </h3>
-              <input class="w-full h-full py-2 px-5 text-gray-700 text-xl border border-gray-700 rounded-md" id="firstName" type="text">
+              <input class="w-full h-full py-2 px-5 text-gray-200 text-xl border border-gray-700 rounded-md shadow-[#333333] shadow-inner bg-[#555555]" id="firstName" type="text">
             </div>
             <div class="flex flex-col w-[48%] h-full">
               <h3 class="text-xl text-white mx-2 my-1">Last Name: </h3>
-              <input class="w-full h-full py-2 px-5 text-gray-700 text-xl border border-gray-700 rounded-md" id="lastName" type="text">
+              <input class="w-full h-full py-2 px-5 text-gray-200 text-xl border border-gray-700 rounded-md shadow-[#333333] shadow-inner bg-[#555555]" id="lastName" type="text">
             </div>
           </div>
           <div class="w-full h-[17%] flex justify-between my-[2vh]">
             <div class="flex flex-col w-full h-full">
               <h3 class="text-xl text-white mx-2 my-1">Email: </h3>
-              <input class="w-full h-full py-2 px-5 text-gray-700 text-xl border border-gray-700 rounded-md" id="email" type="text">
+              <input class="w-full h-full py-2 px-5 text-gray-200 text-xl border border-gray-700 rounded-md shadow-[#333333] shadow-inner bg-[#555555]" id="email" type="text">
             </div>
           </div>
           <div class="w-full h-[25%] flex justify-between">
             <div class="flex flex-col w-full h-full">
               <h3 class="text-2xl text-white mx-2 my-1">Message: </h3>
-              <textarea name="message" id="message" rows="4" class="block w-full rounded-md border border-gray-700 px-5 py-2 text-gray-700"></textarea>
+              <textarea name="message" id="message" rows="4" class="block w-full rounded-md border border-gray-700 px-5 py-2 text-gray-200 shadow-[#333333] shadow-inner bg-[#555555]"></textarea>
             </div>
           </div>
           <button class="bg-[#111111] mx-auto my-5 w-[20vw] h-[7vh] text-2xl font-bold text-white py-2 rounded-lg shadow-xl hover:bg-[#191919] duration-300">Submit</button>
         </div>
       </form>
-      
     </div>
-  <div id="popup" class="hidden text-2xl font-bold fixed top-[3vh] left-1/2 transform -translate-x-1/2 bg-gray-700 text-white py-[1vh] px-[1vw] rounded-lg shadow-lg">Copied to Clipboard</div>
-  <div id="sentPopup" class="hidden text-2xl font-bold fixed top-[3vh] left-1/2 transform -translate-x-1/2 bg-gray-700 text-white py-[1vh] px-[1vw] rounded-lg shadow-lg">Successfully Sent</div>
-  <div id="errorPopup" class="hidden text-2xl font-bold fixed top-[3vh] left-1/2 transform -translate-x-1/2 bg-red-500 text-black py-[1vh] px-[1vw] rounded-lg shadow-lg">Please fill out all sections before submitting</div>
-  <script src="contact.js"></script>
+    <div id="popup" class="hidden text-2xl font-bold fixed top-[3vh] left-1/2 transform -translate-x-1/2 bg-gray-700 text-white py-[1vh] px-[1vw] rounded-lg shadow-lg">Copied to Clipboard</div>
+    <div id="sentPopup" class="hidden text-2xl font-bold fixed top-[3vh] left-1/2 transform -translate-x-1/2 bg-gray-700 text-white py-[1vh] px-[1vw] rounded-lg shadow-lg">Successfully Sent</div>
+    <div id="errorPopup" class="hidden text-2xl font-bold fixed top-[3vh] left-1/2 transform -translate-x-1/2 bg-red-500 text-black py-[1vh] px-[1vw] rounded-lg shadow-lg">Please fill out all sections before submitting</div>
+    <script src="contact.js"></script>
   </body>
 </html>
