--- a/contact.html
+++ b/contact.html
@@ -99,10 +99,10 @@
       <div class="flex justify-between w-full h-[10%]">
         <h1 class="text-4xl font-bold text-white my-[3vh] mx-[2vw]">Contact</h1>
         <div class="ml-auto bg-zinc-800 w-[40vw] rounded-tr-lg rounded-bl-lg flex items-center justify-around border-b border-r border-gray-700 shadow-md shadow-gray-700 shadow-inner">
-          <a href="index.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Home</a>
-          <a href="about.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">About</a>
-          <a href="project.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Projects</a>
-          <a href="contact.html" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent hover:text-white">Contact</a>
+          <a href="index.html" class="text-[1.5vw] tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Home</a>
+          <a href="about.html" class="text-[1.5vw] tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">About</a>
+          <a href="project.html" class="text-[1.5vw] tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Projects</a>
+          <a href="contact.html" class="text-[1.5vw] tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent hover:text-white">Contact</a>
         </div>
       </div>
       <hr class="border-t-[1vh] border-gray-600 w-[7%] mt-[2vh] mx-[2vw]">
