--- a/about.html
+++ b/about.html
@@ -54,20 +54,19 @@
           <h1 class="text-4xl text-white font-bold">Victor Liu</h1>
           <hr class="border-t-2 border-gray-700 w-[90%] mt-[2vh]">
           <div class="flex flex-col justify-around items-center w-full h-full">
-            <h3 class="text-2xl text-gray-300 w-[90%] text-center"><span class="font-bold text-white">Your talent</span><br> determines what you can do.</h3>
-            <h3 class="text-2xl text-gray-300 w-[90%] text-center"><span class="font-bold text-white">Your motivation</span> determines how much you're willing to do.</h3>
-            <h3 class="text-2xl text-gray-300 w-[90%] text-center"><span class="font-bold text-white">Your attitude</span> determines how well you do it.</h3>
-            <h3 class="text-2xl text-white w-[90%] text-center"> — Lou Holtz</h3>
+            <h3 class="text-4xl text-gray-300 w-[90%] text-center">Live as if you were to die tomorrow.</h3>
+            <h3 class="text-4xl text-gray-300 w-[90%] text-center">Learn as if you were to live forever.</h3>
+            <h3 class="text-2xl text-white w-[90%] text-center"> — Mahatma Gandhi</h3>
           </div>
         </div>
       <div class="mr-auto bg-[#222222] border border-gray-700 w-[72%] h-[90%] rounded-lg shadow-md shadow-gray-700 flex flex-col animated-background">
       <div class="flex justify-between w-full h-[10%]">
         <h1 class="text-4xl font-bold text-white my-[3vh] mx-[2vw]">About Me</h1>
           <div class="ml-auto bg-zinc-800 w-[40vw] rounded-tr-lg rounded-bl-lg flex items-center justify-around border-b border-r border-gray-700 shadow-md shadow-gray-700">
-            <a href="index.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Home</a>
-            <a href="about.html" class="text-xl tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent hover:text-white">About</a>
-            <a href="project.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Projects</a>
-            <a href="contact.html" class="text-xl tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Contact</a>
+            <a href="index.html" class="text-[1.5vw] tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Home</a>
+            <a href="about.html" class="text-[1.5vw] tracking-wide text-white transition duration-300 border-b-2 border-white hover:border-transparent hover:text-white">About</a>
+            <a href="project.html" class="text-[1.5vw] tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Projects</a>
+            <a href="contact.html" class="text-[1.5vw] tracking-wide text-gray-400 transition duration-300 border-b-2 border-transparent hover:border-white hover:text-white">Contact</a>
           </div>
         </div>
         <hr class="border-t-[1vh] border-gray-500 w-[7%] mt-[2vh] mx-[2vw]">
@@ -77,7 +76,7 @@
           <div class="grid grid-cols-2 gap-[3vh] w-full h-[60%] mt-[5vh]">
             <div class="bg-[#333333] hover:shadow-md hover:shadow-white duration-300 rounded-lg w-full h-[17vh] border-t border-l border-white hover:scale-[1.02] hover:cursor-pointer flex flex-col items-center p-[2vh] group">
               <div class="flex justify-center space-x-2">
-                <img src="assets/tennisIcon.png" alt="" class="w-[10%]">
+                <img src="assets/tennisIcon.png" alt="" class="w-[10%] opacity-50 group-hover:opacity-100 duration-300">
                 <h3 class="text-xl font-bold text-gray-400 group-hover:text-white">Tennis</h3>
               </div>
               <hr class="border-t-2 border-gray-500 w-[70%] my-[1vh] group-hover:border-white duration-300">
@@ -85,7 +84,7 @@
             </div>
             <div class="bg-[#333333] hover:shadow-md hover:shadow-white duration-300 rounded-lg w-full h-[17vh] border-t border-l border-white hover:scale-[1.02] hover:cursor-pointer flex flex-col items-center p-[2vh] group">
               <div class="flex justify-center space-x-2">
-                <img src="assets/codingIcon.png" alt="" class="w-[10%]">
+                <img src="assets/codingIcon.png" alt="" class="w-[10%] opacity-50 group-hover:opacity-100 duration-300">
                 <h3 class="text-xl font-bold text-gray-400 group-hover:text-white">Coding</h3>
               </div>
               <hr class="border-t-2 border-gray-500 w-[70%] my-[1vh] group-hover:border-white duration-300">
@@ -93,7 +92,7 @@
             </div>
             <div class="bg-[#333333] hover:shadow-md hover:shadow-white duration-300 rounded-lg w-full h-[17vh] border-t border-l border-white hover:scale-[1.02] hover:cursor-pointer flex flex-col items-center p-[2vh] group">
               <div class="flex justify-center space-x-2">
-                <img src="assets/violinIcon.png" alt="" class="w-[10%]">
+                <img src="assets/violinIcon.png" alt="" class="w-[10%] opacity-50 group-hover:opacity-100 duration-300">
                 <h3 class="text-xl font-bold text-gray-400 group-hover:text-white">Violin</h3>
               </div>
               <hr class="border-t-2 border-gray-500 w-[70%] my-[1vh] group-hover:border-white duration-300">
@@ -101,7 +100,7 @@
             </div>
             <div class="bg-[#333333] hover:shadow-md hover:shadow-white duration-300 rounded-lg w-full h-[17vh] border-t border-l border-white hover:scale-[1.02] hover:cursor-pointer flex flex-col items-center p-[2vh] group">
               <div class="flex justify-center space-x-2">
-                <img src="assets/swimmingIcon.png" alt="" class="w-[10%]">
+                <img src="assets/swimmingIcon.png" alt="" class="w-[10%] opacity-50 group-hover:opacity-100 duration-300">
                 <h3 class="text-xl font-bold text-gray-400 group-hover:text-white">Swimming</h3>
               </div>
               <hr class="border-t-2 border-gray-500 w-[70%] my-[1vh] group-hover:border-white duration-300">
